--- a/app/src/main/res/layout/order_items.xml
+++ b/app/src/main/res/layout/order_items.xml
@@ -27,20 +27,20 @@
                 android:fontFamily="@font/satoshi_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/txtOrderDate"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/satoshi_medium"
                 android:layout_height="wrap_content"
-                android:textSize="11sp"
+                android:textSize="18sp"
                 android:textColor="@color/text_normal_color"
                 android:text="Order Date"/>
 
             <TextView
                 android:id="@+id/txtOrderEmailId"
-                android:textSize="10sp"
+                android:textSize="15sp"
                 android:fontFamily="@font/satoshi_medium"
                 android:textColor="@color/text_normal_color"
                 android:text="ashishrajput8156@gmail.com"
@@ -68,6 +68,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:visibility="gone"
                 android:paddingRight="10dp"
                 android:paddingLeft="10dp"
                 android:paddingBottom="2dp"
