--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -151,6 +151,7 @@
         </FrameLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/adminLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/productbackground"
